--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="image/WhatsApp Image 2025-03-16 at 20.31.01_b9468132.jpg" alt="Your Profil Picture"
+            <img src="Picsart_25-03-20_09-32-42-506.jpg" alt="Your Profil Picture"
                 class="profile-picture">
             <h1> Arut selvam c</h1>
             <p>I am student</p>
